feat: add matter network transport, storage nodes, filters, and debug tooling
Build out the matter network as a multi-channel transport system and wire the
new storage/test blocks directly into it.

Matter network
- add matter pylons with manual linking and end-rod style placement/orientation
- support four channels: energy, items, fluids, and redstone
- add per-channel mode config: disabled, import, export, import/export
- add per-channel priority IDs with equal splitting for matching priorities
- let every node relay traffic so dedicated relay mode is no longer required
- add route caching and dirty rebuilds instead of full graph walks every tick
- harden shared network state for multiplayer/server lifecycle cleanup
- add chunkloading for pylon-backed matter network nodes
- restrict direct storage-to-storage links to pylons or same-type storage nodes
- add safer item/fluid transfer commits with pending buffers to avoid loss on
  partial inserts/fills
- add redstone signal transport as a real fourth matter network channel

Network visuals and debugging
- add global-rendered matter network link lightning so links stay visible even
  when endpoints are off-screen
- add separate rendered lanes for active channel links and smooth their curves
- color channels to match power crystal themes:
  energy green, items red, fluids blue
- add per-channel debug overlays with signed units such as fe/t, i/t, mb/t,
  and rs
- rename the debug command to `/matterworksdebug matter_network on|off`
- add pylon GUI/config syncing, live ID updates, and network overlay toggles

Storage and test blocks
- add Matter Energy Cell with FE storage, GUI, redstone comparator output,
  item charging/discharging, and matter network support
- add Matter Fluid Tank with GUI, fluid container handling, comparator output,
  and matter network support
- add Matter Storage Barrel as a single-block 54-slot inventory with comparator
  output and matter network support
- rename the old pylon test blocks to C