@@ -10,6 +10,14 @@ import java.util.Set;
 import java.util.stream.Stream;
 
 public class ModBlockLootTableProvider extends BlockLootSubProvider {
+    private static final Set<Block> DIRECT_BLOCKS = Set.of(
+            de.artemis.matterworks.common.registry.ModBlocks.MATTER_ENERGY_CELL.get(),
+            de.artemis.matterworks.common.registry.ModBlocks.MATTER_FLUID_TANK.get(),
+            de.artemis.matterworks.common.registry.ModBlocks.MATTER_STORAGE_BARREL.get(),
+            de.artemis.matterworks.common.registry.ModBlocks.MATTER_PYLON.get(),
+            de.artemis.matterworks.common.registry.ModBlocks.CREATIVE_SOURCE.get(),
+            de.artemis.matterworks.common.registry.ModBlocks.CREATIVE_SINK.get()
+    );
     private static final Set<Block> GENERATED_BLOCKS = ModDatagenEntries.ALL_PAIRS.stream()
             .flatMap(pair -> Stream.of(pair.base().get(), pair.glowing().get()))
             .collect(java.util.stream.Collectors.toUnmodifiableSet());
@@ -32,6 +40,7 @@ public class ModBlockLootTableProvider extends BlockLootSubProvider {
 
     @Override
     protected void generate() {
+        DIRECT_BLOCKS.forEach(this::dropSelf);
         GENERATED_BLOCKS.forEach(this::dropSelf);
         GENERATED_PILLARS.forEach(this::dropSelf);
         GENERATED_FANS.forEach(this::dropSelf);
@@ -42,11 +51,12 @@ public class ModBlockLootTableProvider extends BlockLootSubProvider {
     @Override
     protected @NotNull Iterable<Block> getKnownBlocks() {
         return Stream.of(
+                DIRECT_BLOCKS.stream(),
                 GENERATED_BLOCKS.stream(),
                 GENERATED_PILLARS.stream(),
                 GENERATED_FANS.stream(),
                 GENERATED_DOORS.stream(),
                 GENERATED_TRAPDOORS.stream()
-        ).flatMap(stream -> stream).toList();
+        ).flatMap(stream -> stream).map(block -> (Block) block).collect(java.util.stream.Collectors.toList());
     }
 }
